* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.4 through iRODS 3.0, and is tested with the current (as of release time) development version of iRODS

==Libraries==


Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]


==Bug Fixes==

[#756] IRODSDataConversionUtil date should be null if no data in query result
[#761] unregister collection recursively causes error when multiple subfolders
[#768] -1202000 error executing rule via jargon - added unit test to capture reported bug

==Features==

 * [#5] GenQuery Enhancements
 ** new query builder model allows easier programmatic building of General Query
 
 * [#713] additional query and data generation methods for tickets
 ** added method to check if a ticket is in use
 ** additional listing methods for data objects and collections
 ** added method to IRODSServerProperties for isSupportTickets()
 ** added 'meta' methods to add and update tickets for cleaner mid-tier code
 
 * [#723] add ireg support in jargon 
 ** added methods to unregister a collection
 
 * [#530] password change for user as Admin User
 ** UserAOImpl now has password change method changeAUserPasswordByAnAdmin
 
 ===========================
 
 
 