@@ -11,6 +11,7 @@ import junit.framework.Assert;
 import org.irods.jargon.core.connection.IRODSAccount;
 import org.irods.jargon.core.pub.io.IRODSFile;
 import org.irods.jargon.core.pub.io.IRODSFileFactory;
+import org.irods.jargon.core.query.GenQueryOrderByField;
 import org.irods.jargon.core.query.IRODSGenQuery;
 import org.irods.jargon.core.query.IRODSGenQueryBuilder;
 import org.irods.jargon.core.query.IRODSGenQueryFromBuilder;
@@ -690,6 +691,98 @@ public class IRODSGenQueryExecutorImplTest {
 				.executeIRODSQuery(query, 0);
 
 		Assert.assertNotNull(resultSet);
+	}
+
+	/**
+	 * A builder query with order-by semantics
+	 * 
+	 * @throws Exception
+	 */
+	@Test
+	public final void testExecuteIRODSQueryBuilderQueryWithOrderByDesc()
+			throws Exception {
+
+		IRODSGenQueryBuilder builder = new IRODSGenQueryBuilder(true, null);
+		builder.addSelectAsGenQueryValue(RodsGenQueryEnum.COL_R_RESC_NAME)
+				.addSelectAsGenQueryValue(RodsGenQueryEnum.COL_R_ZONE_NAME)
+				.addConditionAsGenQueryField(
+						RodsGenQueryEnum.COL_R_ZONE_NAME,
+						QueryConditionOperators.EQUAL,
+						testingProperties
+								.getProperty(TestingPropertiesHelper.IRODS_ZONE_KEY))
+				.addOrderByGenQueryField(RodsGenQueryEnum.COL_R_RESC_NAME,
+						GenQueryOrderByField.OrderByType.DESC);
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		IRODSAccessObjectFactory accessObjectFactory = irodsFileSystem
+				.getIRODSAccessObjectFactory();
+
+		IRODSGenQueryExecutor irodsGenQueryExecutor = accessObjectFactory
+				.getIRODSGenQueryExecutor(irodsAccount);
+		IRODSGenQueryFromBuilder query = builder
+				.exportIRODSQueryFromBuilder(50);
+
+		IRODSQueryResultSetInterface resultSet = irodsGenQueryExecutor
+				.executeIRODSQuery(query, 0);
+
+		Assert.assertNotNull(resultSet);
+		String last = "";
+		String current = "";
+		for (IRODSQueryResultRow row : resultSet.getResults()) {
+			current = row.getColumn(0);
+			if (!last.isEmpty()) {
+				int compare = current.compareTo(last);
+				Assert.assertTrue("out of order", compare < 0);
+			}
+			last = current;
+		}
+	}
+
+	/**
+	 * A builder query with order-by semantics
+	 * 
+	 * @throws Exception
+	 */
+	@Test
+	public final void testExecuteIRODSQueryBuilderQueryWithOrderByAsc()
+			throws Exception {
+
+		IRODSGenQueryBuilder builder = new IRODSGenQueryBuilder(true, null);
+		builder.addSelectAsGenQueryValue(RodsGenQueryEnum.COL_R_RESC_NAME)
+				.addSelectAsGenQueryValue(RodsGenQueryEnum.COL_R_ZONE_NAME)
+				.addConditionAsGenQueryField(
+						RodsGenQueryEnum.COL_R_ZONE_NAME,
+						QueryConditionOperators.EQUAL,
+						testingProperties
+								.getProperty(TestingPropertiesHelper.IRODS_ZONE_KEY))
+				.addOrderByGenQueryField(RodsGenQueryEnum.COL_R_RESC_NAME,
+						GenQueryOrderByField.OrderByType.ASC);
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		IRODSAccessObjectFactory accessObjectFactory = irodsFileSystem
+				.getIRODSAccessObjectFactory();
+
+		IRODSGenQueryExecutor irodsGenQueryExecutor = accessObjectFactory
+				.getIRODSGenQueryExecutor(irodsAccount);
+		IRODSGenQueryFromBuilder query = builder
+				.exportIRODSQueryFromBuilder(50);
+
+		IRODSQueryResultSetInterface resultSet = irodsGenQueryExecutor
+				.executeIRODSQuery(query, 0);
+
+		Assert.assertNotNull(resultSet);
+		String last = "";
+		String current = "";
+		for (IRODSQueryResultRow row : resultSet.getResults()) {
+			current = row.getColumn(0);
+			if (!last.isEmpty()) {
+				int compare = current.compareTo(last);
+				Assert.assertTrue("out of order", compare > 0);
+			}
+			last = current;
+		}
 	}
 
 }
