@@ -53,6 +53,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 
  * [#5] GenQuery Enhancements
  ** new query builder model allows easier programmatic building of General Query
+ ** add order by semantics to builder queries
+ 
  
  * [#713] additional query and data generation methods for tickets
  ** added method to check if a ticket is in use
